clusters/master/apps/quayio-pull-through-cache/quayio-pull-through-cache-gcs.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quayio-pull-through-cache-gcs
spec:
  to:
    kind: Service
    name: quayio-pull-through-cache-gcs
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: v1
kind: Service
metadata:
  name: quayio-pull-through-cache-gcs
spec:
  selector:
    app: quayio-pull-through-cache-gcs
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quayio-pull-through-cache-gcs
  labels:
    app: quayio-pull-through-cache-gcs
spec:
  selector:
    matchLabels:
      app: quayio-pull-through-cache-gcs
  template:
    metadata:
      labels:
        app: quayio-pull-through-cache-gcs
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/quayio-cache-worker"
        operator: "Equal"
        value: "quayio-cache-worker"
        effect: "NoSchedule"
      nodeSelector:
        cache-workload: quayio-cache
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: quayio-pull-through-cache-gcs
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: quayio-cache
        image: registry.ci.openshift.org/ci/docker-registry:tp-2.8.2-gcs
        command:
        - /tp-entrypoint.sh
        ports:
          - name: http
            containerPort: 5000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - mountPath: /etc/quay-io-pull-credentials
          name: quay-io-pull-credentials
        - mountPath: /etc/docker-registry
          name: config
      volumes:
      - name: config
        configMap:
          name: quayio-pull-through-cache-gcp
      - name: quay-io-pull-credentials
        secret:
          secretName: quay-io-pull-credentials
