clusters/master/apps/quayio-pull-through-cache/quayio-pull-through-cache-us-east-1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quayio-pull-through-cache-us-east-1
spec:
  to:
    kind: Service
    name: quayio-pull-through-cache-us-east-1
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: v1
kind: Service
metadata:
  name: quayio-pull-through-cache-us-east-1
spec:
  selector:
    app: quayio-pull-through-cache-us-east-1
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quayio-pull-through-cache-us-east-1
  labels:
    app: quayio-pull-through-cache-us-east-1
spec:
  selector:
    matchLabels:
      app: quayio-pull-through-cache-us-east-1
  template:
    metadata:
      labels:
        app: quayio-pull-through-cache-us-east-1
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/quayio-cache-worker"
        operator: "Equal"
        value: "quayio-cache-worker"
        effect: "NoSchedule"
      nodeSelector:
        cache-workload: quayio-cache
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: quayio-pull-through-cache-us-east-1
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: quayio-cache
        image: registry.ci.openshift.org/ci/docker-registry:tp-2.8.1
        command:
        - /tp-entrypoint.sh
        ports:
          - name: http
            containerPort: 5000
        volumeMounts:
        - mountPath: /etc/quay-io-pull-credentials
          name: quay-io-pull-credentials
        - mountPath: /etc/docker-registry
          name: config
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: config
        configMap:
          name: quayio-pull-through-cache-us-east-1
      - name: quay-io-pull-credentials
        secret:
          secretName: quay-io-pull-credentials
